--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<h1> trabalhamos com a area alimenticia</h1>
+<!DOCTYPE html>
+<html lang=”pt-br”>
+ <head>
+    <meta charset=”UTF-8”>
+    <title>NA docerias</title>
+ </head>
+ <body>
+     <h1> trabalhamos com a area alimenticia</h1>
 
-<p> estamos localizados na avenida das flores 796 <strong> NA docerias</strong> trabalhamos com os melhores produtos com alta qualidade. fundada des de 2020, a NA tem destaque com seus otimos produtos.</p>
+     <p> estamos localizados na avenida das flores 796 <strong> NA docerias</strong> trabalhamos com os melhores produtos com alta qualidade. fundada des de 2020, a NA tem destaque com seus otimos produtos.</p>
 
-<p><em> nosso objetivo e ''deixar nossos clientes sempre satisfeitos''.</em></p>
+     <p><em> nosso objetivo e ''deixar nossos clientes sempre satisfeitos''.</em></p>
 
-<p> temos os melhores profissionais, o melhor cafe da regiao. um trabalho com agilidade e melhor desempenho.</p>
+     <p> temos os melhores profissionais, o melhor cafe da regiao. um trabalho com agilidade e melhor desempenho.</p>
+ </body>
+</html>
+  
